# testTravis

./: .travis.yml
CI/: before_deploy.sh  before_script.osx.sh  before_script.sh  deploy.sh  script.sh
src/: CMakeLists.txt  README.md
